Add placeholder maker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-3 col-sm-5 form-group">
       <label>Example</label>
       <input class="form-control" maxlength="20" currencyMask formControlName="value" [(ngModel)]="value"
-        [placeholder]="'R$ 0,00'" [options]="ngxCurrencyOptions" />
+        [options]="ngxCurrencyOptions" />
     </div>
   </div>
 
